--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<div class="col-lg-8 col-lg-offset-2 centered">
 						<img id="alexander" class="noselect" width="155" height="155" src="img/alexander.jpg" style="border-radius:150px;" alt="user" /><h1> Hi, I am Alexander!</h1>
 						<p>Student Computer Science and Applied Physics with experience in the area of web development and programming. Positive attitude and solution driven. Interested in creating innovative solutions with intuitive user interfaces.</p>
-						<div class="alert alert-job" role="alert"><strong>Currently looking for a job</strong><br />starting September 1 , Delft area.</div>
+						<!--<div class="alert alert-job" role="alert"><strong>Currently looking for a job</strong><br />starting September 1, Delft area.</div>-->
 					</div><!-- /col-lg-8 -->
 				</div><!-- /row -->
 			  </div> <!-- /container -->
