--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 					<div class="thumbnail">
 					  <img class="noselect" src="img/projects/ife-thumb.png" alt="Interactive Forum Explorer">
 					  <div class="caption">
-						<h3>Computer Science Master's thesis</h3>
+						<h3>Computer Science Master thesis</h3>
 						<div class="portfolio-skills">
 							<span class="label label-white">Python</span> 
 							<span class="label label-white">Django</span>
@@ -275,7 +275,7 @@
 						<div class="portfolio-skills">
 							<span class="label label-white">Adobe After Effects</span> 
 						</div>
-						<p>With a team of 8, we organized a volleyball tournament for the volleyball society 'D.S.V.V. Punch'. For the promotion of the event,I created a trailer using Adobe After Effects.</p>
+						<p>With a committee of 8, we organized a volleyball tournament for the volleyball society 'D.S.V.V. Punch'. For the promotion of the event, I created a trailer using Adobe After Effects.</p>
 						<div class="portfolio-buttons">
 							<a href="http://www.youtube.com/watch?v=NTkryv3I7oI" class="portfolio-link">
 								<button type="button" class="btn btn-default">
@@ -296,7 +296,7 @@
 						<div class="portfolio-skills">
 							<span class="label label-white">Adobe Premier Pro</span> 
 						</div>
-						<p>I like to create compilation videos of my holidays, trips as ski instructor, the social events I attend to or other activities. For example, a compilation video of a winter sports holiday.</p>
+						<p>I like to create compilation videos of my holidays, trips as ski instructor, the social events I attend to and other activities. For example, a compilation video of a winter sports holiday.</p>
 						<div class="portfolio-buttons">
 							<a target="_BLANK" href="https://youtu.be/xVqEs0duqQU">
 								<button type="button" class="btn btn-default">
@@ -364,7 +364,7 @@
 							<span class="label label-white">HTML</span>
 							<span class="label label-white">CSS</span>
 						</div>
-						<p>A website to manage the guitar songs I learned to play. I used this project to learn to build websites. With sortable tables, responsive grid and AJAX requests.</p>
+						<p>A website to manage the guitar songs I learned to play. I used this project to learn to build websites back then. With sortable tables, responsive grid and AJAX requests.</p>
 						<div class="portfolio-buttons">
 							<a target="_BLANK" href="">
 								<button disabled type="button" title="Too old to show..." class="btn btn-default">
