--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<div class="container pt">
 			  <div class="row mt centered">
 				<div class="col-lg-12">
-					<h1>Some of my projects</h1>
+					<h1>Some of my favorite projects</h1>
 				</div>	
 			  </div>
 			
